fix: increment seekBackCountOnError on Rejected

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,3 +16,4 @@ endfunction()
 add_unittest(rule_test)
 add_unittest(list_rule_test)
 add_unittest(candidate_rule_test)
+add_unittest(sequence_rule_test)
